css/style.css
/* ... */
/*
 * 1. Correct font-size not inheriting in all browsers
 * 2. Remove margins in FF3/4 S5 Chrome
 * 3. Define consistent vertical alignment display in all browsers
 */

button, input, select, textarea, .textarea { font-size: 100%; margin: 0; vertical-align: baseline; *vertical-align: middle; }

/*
 * 1. Define line-height as normal to match FF3/4 (set using !important in the UA stylesheet)
 * 2. Correct inner spacing displayed oddly in IE6/7
 */

button, input { line-height: normal; *overflow: visible; }

/*
 * Reintroduce inner spacing in 'table' to avoid overlap and whitespace issues in IE6/7
 */

table button, table input { *overflow: auto; }

/*
 * 1. Display hand cursor for clickable form elements
 * 2. Allow styling of clickable form elements in iOS
 */

button, input[type="button"], input[type="reset"], input[type="submit"] { cursor: pointer; -webkit-appearance: button; }

/*
 * Consistent box sizing and appearance
 */

input[type="checkbox"], input[type="radio"] { box-sizing: border-box; }
input[type="search"] { -webkit-appearance: textfield; -moz-box-sizing: content-box; -webkit-box-sizing: content-box; box-sizing: content-box; }
input[type="search"]::-webkit-search-decoration { -webkit-appearance: none; }

/*
 * Remove inner padding and border in FF3/4: h5bp.com/l
 */

button::-moz-focus-inner, input::-moz-focus-inner { border: 0; padding: 0; }

/*
 * 1. Remove default vertical scrollbar in IE6/7/8/9
 * 2. Allow only vertical resizing
 */

textarea, .textarea { overflow: auto; vertical-align: top; resize: vertical; }

/* Colors for form validity */
input:valid, textarea:valid {  }
input:invalid, textarea:invalid { background-color: #f0dddd; }

input, textarea, button, .matchtext-div, .textarea, select {
	background: #fff;
	border: 1px solid;
	border-color: #dddddd #bbbbbb #999999;
	padding: 2px 4px;
	resize: none;
	box-sizing: border-box; -moz-box-sizing: border-box; -webkit-box-sizing: border-box; -ms-box-sizing: border-box; -o-box-sizing: border-box;
}
select {
	padding: 0;
}

button[disabled] {
	background: #fff !important;
	border: 1px solid #ddd;
	color: #ddd;
}

button:focus,
input:focus,
select:focus,
textarea:focus,
.textarea:focus {
	-moz-box-shadow: #E04F3D 0 0 7px 0;
	-webkit-box-shadow: #E04F3D 0 0 7px 0;
	-o-box-shadow: #E04F3D 0 0 7px 0;
	box-shadow: #E04F3D 0 0 7px 0;
	border-color: #C1847C;
	z-index: 1;
	outline: 0;
}

.inputWidget, .matchtext-div {
	font-size: 1.2em;
	font-family: 'Droid Sans Mono', monospace;
	height: 80px;
	line-height:1.2em;
	margin: 3px 0 0;
	outline: 0;
	padding: 0 0 0 4px;
	width: 470px;
	white-space: pre;
	word-wrap: break-word;
}

.matchtext-div {
	color: transparent;
	overflow: auto;
}
.matchtext {
	background: transparent;
	position: absolute;
	z-index: 10;
}

.arrow-button {
	margin-left: 1px;
	width: 25px;
}

label.matchtext-label {
	display: block;
}

.unmatched{
	background-color:#FFC6C6;
}
.matched{
	background-color:#90EE90;
}

button[disabled]{
	background-color:grey;
}


/* =============================================================================
   Tables
   ========================================================================== */

table { border-collapse: collapse; border-spacing: 0; }
td { vertical-align: top; }


/* ==|== primary styles =====================================================
   Author: Sebastian Gaul <sebastian@dev.mgvmedia.com>
   ========================================================================== */

#container {
	margin: 20px auto;
	width: 960px;
}

.overlay {
	border-radius: 5px; -moz-border-radius: 5px; -webkit-border-radius: 5px;
	box-shadow: 0 1px 10px #444; -moz-box-shadow: 0 1px 10px #444; -webkit-box-shadow: 0 1px 10px #444;
	padding: 5px 10px;
	position: absolute;
	width: 450px;
}
.no-boxshadow .overlay {
	border: 1px solid #999;
	width: 448px;
}
.close-button {
	cursor: pointer;
	float: right;
	font-weight: bold;
}

#regex-section, #matching-section, #link-section, #code-section{
	float: left;
	width: 470px;
}

#regex-section, #link-section {
	margin-right: 20px;
}

header h1 {
	font-size: 3em;
	font-weight: normal;
}
header small {
	font-size: 14px;
}
.appname strong {
	color: #E04F3D;
}
.js #no-js-warning {
	display: none;
}
.no-js #no-js-warning {
	background-color: #C64738;
	border-radius: 5px;
	color: #fff;
	font-size: 1.5em;
	padding: 3px 5px;
}
.no-js #regex-section, .no-js #matching-section {
	display: none;
}

#regex-error {
	background-color: #C64738;
	color: #fff;
	display: none;
	margin-top: 3px;
	z-index: 100;
}

#regex-options {
	color: #666;
	list-style-type: none;
	margin-left: 0;
	padding-left: 0;
}
#regex-options li {
	margin-left: 0;
}
#regex-options input[type="checkbox"] {
	width: 13px;
	height: 13px;
	padding: 0;
	margin:0;
	vertical-align: bottom;
	position: relative;
	top: -1px;
	*overflow: hidden;
}
#regex-options strong {
	color: #000;
	padding: 0 10px;
}

#add-matchtext-section {
	margin-top: 0;
	text-align: right;
}
#add-matchtext {
	color: #999;
	cursor: pointer;
	font-size: 2em;
	font-weight: bold;
}

.navigate-match-section {
	margin-top: 1px;
	text-align: right;
}

.match-info {
	padding-right: 1em;
}

.more-information {
	background: #fff;
	margin-top: 3px;
	z-index: 15;
}
.more-information ul {
	list-style-type: none;
	margin-left: -10px;
	margin-right: -10px;
	padding-left: 0;
}
.more-information li {
	background: #eee;
	padding: 2px 15px;
}
.more-information li:nth-child(2n) {
	background: #fff;
}




footer {
	font-size: 12px;
	padding-top: 40px;
}



/* ==|== non-semantic helper classes ========================================
   Please define your styles before this section.
   ========================================================================== */

/* For image replacement */
.ir { display: block; border: 0; text-indent: -999em; overflow: hidden; background-color: transparent; background-repeat: no-repeat; text-align: left; direction: ltr; }
.ir br { display: none; }
/* ... */

